# Nacre

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  THIRD_PARTY_LICENSES.md  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  build-android.yml  build-person-names.yml  release-llm-model.yml  train-kenlm-compact.yml  train-kenlm.yml
.superpowers/brainstorm/15023-1774834609/: .server-info  .server-stopped  flick-gboard-style.html  flick-gboard-v2.html  qwerty-row4-trackball.html  toolbar-unified.html
.superpowers/brainstorm/16514-1774913065/: .server-info  .server-stopped  flick-bottom-aligned.html  flick-bottom-final.html  flick-height-fix.html  flick-no-tabs.html  waiting.html
.superpowers/brainstorm/792-1774810915/: .server-stopped  flick-12key-v2.html  flick-12key-v3.html  flick-12key-v4.html  flick-12key-v5.html  flick-12key.html  row4-comparison-v2.html  row4-comparison-v3.html  row4-comparison.html
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/dict/: connection_group.tsv  english_words.tsv  slang_words.tsv
app/src/main/kotlin/space/manus/nacre/: NacreApplication.kt  PermissionActivity.kt
app/src/main/kotlin/space/manus/nacre/billing/: BillingManager.kt
app/src/main/kotlin/space/manus/nacre/ui/settings/: SettingsActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: method.xml  network_security_config.xml
docs/superpowers/plans/: 2026-03-30-keyboard-enhancements.md  2026-03-31-whisper-typeless-voice-input.md  2026-04-03-sherpa-onnx-voice-input.md
docs/superpowers/specs/: 2026-03-30-flick-gboard-toolbar-design.md  2026-03-30-keyboard-enhancements-design.md  2026-03-31-conversion-voice-nn-design.md  2026-03-31-whisper-typeless-voice-input-design.md
ime-ai/: build.gradle.kts
ime-ai/src/main/cpp/: CMakeLists.txt  nacre_kenlm_jni.cpp  nacre_llama_jni.cpp  nacre_whisper_jni.cpp
ime-ai/src/main/java/space/manus/nacre/ai/: ILlmCallback.java  ILlmService.java  IWhisperCallback.java  IWhisperService.java
ime-ai/src/main/kotlin/space/manus/nacre/ai/: AiPipelineManager.kt  KenLmJni.kt  KenLmScorer.kt  LlamaJni.kt  LlmPostProcessor.kt  LlmService.kt  ModelDownloader.kt  PostProcessor.kt  SherpaRecognizer.kt  WhisperJni.kt  WhisperService.kt
ime-ai/src/main/kotlin/space/manus/nacre/ai/cloud/: CloudLlmConfig.kt  CloudLlmRefiner.kt  OpenAICompatibleRefiner.kt  RefinerFactory.kt
ime-ai/src/test/kotlin/space/manus/nacre/ai/: PostProcessorTest.kt
ime-config/: build.gradle.kts
ime-config/src/main/: AndroidManifest.xml
ime-config/src/main/kotlin/space/manus/nacre/config/: ConfigImportExport.kt  ConfigRepository.kt  KeymapConfig.kt  PresetProvider.kt  ThemeConfig.kt
ime-core/: build.gradle.kts
ime-core/src/main/: AndroidManifest.xml
ime-core/src/main/assets/dict/: bigrams.tsv  common_phrases.tsv  connection_group.tsv  emoji_kaomoji.tsv  english_full.tsv  english_words.tsv  slang_words.tsv  symbols.tsv
ime-core/src/main/kotlin/space/manus/nacre/ime/: NacreComposeView.kt  NacreInputMethodService.kt
ime-core/src/main/kotlin/space/manus/nacre/ime/clipboard/: ClipboardHistory.kt
ime-core/src/main/kotlin/space/manus/nacre/ime/feedback/: FeedbackManager.kt  HapticManager.kt  SoundManager.kt
ime-core/src/main/kotlin/space/manus/nacre/ime/foldable/: FoldableDetector.kt  LayoutSelector.kt
ime-core/src/main/kotlin/space/manus/nacre/ime/input/: AutoConvertEngine.kt  ClipboardManager.kt  FlickEngine.kt  InputEngine.kt  JapaneseEngine.kt  LayerManager.kt  LlmReranker.kt  MacroEngine.kt  NacreDictionary.kt  PhysicalKeyboardDetector.kt  SnippetEngine.kt  TextTransformer.kt  VoiceInputManager.kt
ime-core/src/main/kotlin/space/manus/nacre/ime/keyboard/: CandidateBar.kt  ClipboardPanel.kt  CommandPalette.kt  EmojiPanel.kt  FlickInputPad.kt  KeyLighting.kt  KeyView.kt  KeyboardScreen.kt  NumberPad.kt  QuickInputPad.kt  SymbolFlickPad.kt  SymbolsPanel.kt  Toolbar.kt  VSplitLayout.kt
ime-core/src/main/kotlin/space/manus/nacre/ime/trackball/: TrackballView.kt
sherpa-onnx/: build.gradle.kts
tools/: build_dict.py  build_dict_binary.py  build_dict_v2.py  build_english_dict.py  convert_mozc_dict.py  convert_mozc_dict_v2.py  convert_mozc_dict_v3.py  data_pipeline.py  filter_dict.py  generate_dict.py  merge_neologd_v3.py
